--- a/sundae/estilo/style.css
+++ b/sundae/estilo/style.css
@@ -24,6 +24,49 @@
     --fonte-sundae:'Sundae', sans-serif;
 }
 
+*{
+    padding: 0px;
+    margin: 0px;
+}
+
+header{
+    background-image: url(../imagens/sundae-wallpaper-2.png);
+    background-position: ;
+    max-width: 100em;
+    padding: 5px;
+    text-align: center;
+}
+
 header h1{
-    
+    font-family: var(--fonte-sundae);
+    font-weight: normal;
+    font-size: 2.5em;
+    padding: 10px;
+}
+
+header p{
+    font-family: var(--fonte-pricipal);
+    font-weight: bold;
+    font-size: 2.5em;
+}
+
+header a{
+    text-decoration: none;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+main{
+    background-color: var(--cor-2);
+    max-width: 70em;
+    margin: auto;
+    padding: 5px;
+}
+
+footer{
+    background-color: var(--cor-4);
+}
+
+footer p{
+    margin: 0px;
 }
