--- a/sundae/estilo/style.css
+++ b/sundae/estilo/style.css
@@ -16,11 +16,11 @@
 :root{
 
     /*Palera Marrom*/
-    --cor-1: #763F31;
-    --cor-2: #D4C2B8;
-    --cor-3: #5B3F3B;
-    --cor-4: #503338;
-    --cor-5: #64554d;
+    --cor-1: #774936;
+    --cor-2: #8a5a44;
+    --cor-3: #9d6b53;
+    --cor-4: #b07d62;
+    --cor-5: #c38e70;
 
 
     /*Paleta Rosa*/
@@ -47,7 +47,7 @@
 }
 
 html, body{
-    background: linear-gradient(-45deg, var(--cor-2b), var(--cor-1), var(--cor-2r));
+    background: linear-gradient(to top, var(--cor-2b), var(--cor-1), var(--cor-2r));
     animation: mygradient 2s ease infinite;
 }
 
@@ -64,12 +64,12 @@ html, body{
 }
 
 header{
-    background-color: var(--cor-2);
+    background: linear-gradient(to left, rgba(255, 112, 136, 0.218),rgba(255, 156, 173, 0.361), rgba(255, 112, 136, 0.218));
     max-width: 120em;
     padding: 5px;
     text-align: center;
     border-bottom-width: 1px;
-    border-bottom-color: rgba(0, 0, 0, 0.104);
+    border-bottom-color: rgba(0, 0, 0, 0.514);
     border-bottom-style: solid;
     box-shadow: 0px 2px 8px rgb(0 0 0 / 35%);
 }
@@ -84,6 +84,7 @@ header h1{
 header p{
     font-family: var(--fonte-pricipal);
     font-weight: bold;
+    margin-bottom: 10px;
     font-size: 2.5em;
 }
 
@@ -91,14 +92,29 @@ header a{
     text-decoration: none;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    padding: 10px;
+    font-size: 1.5em;
+    font-weight: bold;
+    padding: 6px;
+    height: 5px;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    transition: 0.5s;
+}
+
+header a:hover{
+    background-color: var(--cor-5);
 }
 
 main{
     background-color: var(--cor-2);
     max-width: 70em;
     margin: auto;
-    padding: 5px;
+    padding: 10px;
+}
+
+img.img-mora{
+    display: block;
+    margin: auto;
 }
 
 footer{
